# HexVerifier

./: .gitignore  CMakeLists.txt  README.md  cp_files_to_evaluation.sh  main.cpp  tests_main.cpp
.github/workflows/: cmake-single-platform.yml
board/algorithms/include/: Bfs.h  Dfs.h  MinMax.h  WinVerificationAlgorithm.h
board/algorithms/src/: Bfs.cpp  Dfs.cpp  MinMax.cpp  WinVerificationAlgorithm.cpp
board/algorithms/tests/: BfsTest.cpp  MinMaxTest.cpp
board/include/: Board.h  BoardParser.h  BoardStateUtils.h  Cell.h  CellCoords.h  Color.h  DistancesKeeper.h  DoneVerifiers.h  HexVerifier.h  NeighboursGenerators.h  NeighboursHelpers.h  WinVerifiers.h
board/src/: Board.cpp  BoardParser.cpp  BoardStateUtils.cpp  Cell.cpp  DistancesKeeper.cpp  DoneVerifiers.cpp  HexVerifier.cpp  NeighboursGenerators.cpp  NeighboursHelpers.cpp
board/tests/: BoardParserTest.cpp  BoardTest.cpp
dataStructures/include/: List.h  Pushable.h  Queue.h  QueueVector.h  Stack.h  StackVector.h  Vector.h
dataStructures/tests/: ListTest.cpp  QueueTest.cpp  StackTest.cpp  VectorTest.cpp
tests/: buildAndRunUnitTests.sh  canWinWithNaive.in  canWinWithNaive.out  common.sh  isBoardPossible.expected  isGameOver.out  test.sh  unit_tests.sh
utils/include/: InputReader.h  InputReaderImpl.h  InputReaderMock.h  String.h
utils/src/: InputReaderImpl.cpp  String.cpp
utils/tests/: InputReaderImplTest.cpp  StringTest.cpp
